# celeres-data-loader

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.agent/workflows/: build-native.md
.github/workflows/: wheels.yml
examples/: quickstart.py
include/cdl/: feistel.hpp  io_block_shuffle.hpp  splitmix64.hpp
src/cdl/: __init__.py  datasets.py  loader.py  prefetch.py  sampler.py  shuffle.py
src/cdl/ext/: __init__.py  bindings.cpp
src/cdl/ext/include/cdl/: cdl.hpp
tests/: conftest.py  test_loader.py  test_sampler.py  test_shuffle.py
tests/cpp/: test_bijection.cpp
